derive/tests/snapshots/wrapper_used/Shipment/create_shipment.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `shipment` table.
    pub fn create_shipment<'a>(
        &'a self,
        shipment: CreateShipment,
    ) -> Result<Shipment, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = shipment.id.value();
        let warehouse_id = shipment.warehouse_id.value();
        let shipment = Shipment { id, warehouse_id };
        let unique_column_values = (shipment.id.clone(), shipment.warehouse_id.clone());
        match self.db().shipment().try_insert(shipment) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "shipment".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ id : {}, warehouse_id : {} }}", unique_column_values.0,
                                unique_column_values.1
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "shipment".into(),
                        })
                    }
                }
            }
        }
    }
}
